# wikipedia-search

./: .gitignore  CMakeLists.txt  README.md  TODO  clean  common.h  dump_issues.txt  makerun  makerundbg  makesearch  makesearchdbg  notes.md  parsing_common.h  search.sh
file_handling/: filehandler.cpp  id_handler.cpp  termDocIdHandler.cpp
frontend/: app.py
frontend/templates/: home.html
output_timer/: runtimer
parser/: mvce.xml  parser.cpp  small.xml  text.xml
preprocess/: extract_stopwords.sh  preprocess.cpp  preprocess.hpp  stopwords.txt  stopwords_plain.txt  stopwords_with_comments.txt
search/: search.cpp
src/: Makefile  index.sh  parsing_common.h  search.sh
src/bzip2/: Makefile  bzip2  bzip2recover
src/file_handling/: filehandler.cpp  id_handler.cpp  mergeIndex.cpp  termDocIdHandler.cpp  zipReadTest.cpp  zip_operations.cpp
src/headers/: common.h  parsing_common.h
src/libstemmer_c/: Makefile  stemwords
src/parser/: mvce.xml  parser.cpp
src/preprocess/: cache.cpp  preprocess.cpp  preprocess.hpp
src/search/: search.cpp
submission/src/parser/: official-log
timing_best_output_stream/: timer.cpp
